package(default_visibility = ["//visibility:public"])

#exports_files([
#    "system-config-tmpl.js",
#    "system-rxjs-operators.js",
#])
#
## Workaround for https://github.com/bazelbuild/bazel-toolchains/issues/356. We need the
## "SYS_ADMIN" capability in order to run browsers with sandbox enabled.
#platform(
#    name = "rbe_platform",
#    parents = ["@rbe_default//config:platform"],
#    remote_execution_properties = """
#      {PARENT_REMOTE_EXECUTION_PROPERTIES}
#      properties: {
#          name: "dockerAddCapabilities"
#          value: "SYS_ADMIN"
#      }
#    """,
#)

exports_files(["tsconfig.lib.json"])

# 이 환경변수값이 필요한거 어디 문서에도 나와있지 않는다. 2020-02-06
config_setting(
    name = "view_engine_mode",
    values = {
        "define": "angular_ivy_enabled=True",
    },
)
